--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - bookgo v1.0.0 (http://bookgo.org.ua)
- * Copyright 2013-2017 Dima Kovalchuk
+ * Copyright 2013-2018 Dima Kovalchuk
  * Licensed under BSD (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 .heading-font {
@@ -395,19 +395,20 @@ header.mini {
   min-height: 35vh;
 }
 header .header-content {
-  text-align: center;
   padding: 150px 0 50px;
   position: relative;
 }
 header .header-content .header-content-inner {
   position: relative;
-  max-width: 500px;
   margin: 0 auto;
 }
 header .header-content .header-content-inner h1 {
   margin-top: 0;
   margin-bottom: 30px;
-  font-size: 30px;
+  font-size: 4rem;
+}
+header .header-content .header-content-inner img {
+  margin: auto;
 }
 header .device-container {
   max-width: 300px;
@@ -419,19 +420,14 @@ header .device-container {
     min-height: 100%;
   }
   header .header-content {
-    text-align: left;
     padding: 0;
     height: 100vh;
   }
   header .header-content .header-content-inner {
     max-width: none;
     margin: 0;
-    position: absolute;
     top: 50%;
     transform: translateY(-50%);
-  }
-  header .header-content .header-content-inner h1 {
-    font-size: 35px;
   }
   header .device-container {
     max-width: none;
@@ -441,11 +437,6 @@ header .device-container {
     position: absolute;
     top: 50%;
     transform: translateY(-55%);
-  }
-}
-@media (min-width: 992px) {
-  header .header-content .header-content-inner h1 {
-    font-size: 50px;
   }
 }
 header.catalogue {
@@ -461,19 +452,6 @@ header.catalogue .header-overlay {
 }
 header.catalogue .header-content {
   text-align: center;
-}
-header.catalogue .header-content .header-content-inner {
-  position: relative;
-}
-@media (min-width: 768px) {
-  header.catalogue .header-content .header-content-inner h1 {
-    font-size: 50px;
-  }
-}
-@media (min-width: 992px) {
-  header.catalogue .header-content .header-content-inner h1 {
-    font-size: 70px;
-  }
 }
 section {
   padding: 100px 0;
