--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -355,6 +355,13 @@ section.main {
         margin-top: 0;
         font-size: 50px;
     }
+    .how-works {
+        margin-top: 60px;
+        h3 {
+            font-size: 1.5em;
+            display: block;
+        }
+    }
     .badges {
         .badge-link {
             display: block;
