Add links to social

--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -127,11 +127,11 @@
 	            }
 	        }
 	    }
-	    &.social-google-plus {
+	    &.social-instagram {
 	        a {
-	            background-color: @brand-google-plus;
+	            background-color: @brand-instagram;
 	            &:hover {
-	                background-color: darken(@brand-google-plus, 5%);
+	                background-color: darken(@brand-instagram, 5%);
 	            }
 	        }
 	    }
