--- a/templates/base_bottom.html
+++ b/templates/base_bottom.html
@@ -25,13 +25,13 @@
                 <h2>Ми <i class="fa fa-heart"></i> нових друзів!</h2>
                 <ul class="list-inline list-social">
                     <li class="social-twitter">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="https://twitter.com/bookgo_me" target="_blank"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li class="social-facebook">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/bookgo.me/" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li class="social-google-plus">
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.instagram.com/bookgo.me/" target="_blank"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
