--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -66,11 +66,11 @@
 .social-list li.social-facebook a:hover {
   background-color: #344e86;
 }
-.social-list li.social-google-plus a {
-  background-color: #dd4b39;
+.social-list li.social-instagram a {
+  background-color: #e95950;
 }
-.social-list li.social-google-plus a:hover {
-  background-color: #d73925;
+.social-list li.social-instagram a:hover {
+  background-color: #e64439;
 }
 .vertical-center-flex {
   display: flex;
@@ -657,11 +657,11 @@ section.contact ul li.social-facebook a {
 section.contact ul li.social-facebook a:hover {
   background-color: #344e86;
 }
-section.contact ul li.social-google-plus a {
-  background-color: #dd4b39;
+section.contact ul li.social-instagram a {
+  background-color: #e95950;
 }
-section.contact ul li.social-google-plus a:hover {
-  background-color: #d73925;
+section.contact ul li.social-instagram a:hover {
+  background-color: #e64439;
 }
 /* --- end --- Home page --- end --- */
 /* --- Single book page --- */
@@ -1216,11 +1216,11 @@ footer ul li a.active {
 #register-login .social-login li.social-facebook a:hover {
   background-color: #344e86;
 }
-#register-login .social-login li.social-google-plus a {
-  background-color: #dd4b39;
+#register-login .social-login li.social-instagram a {
+  background-color: #e95950;
 }
-#register-login .social-login li.social-google-plus a:hover {
-  background-color: #d73925;
+#register-login .social-login li.social-instagram a:hover {
+  background-color: #e64439;
 }
 #register-login .social-login li {
   margin: 8px;
