--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -19,7 +19,7 @@
 
 @brand-twitter:		#1da1f2;
 @brand-facebook:	#3b5998;
-@brand-google-plus:	#dd4b39;
+@brand-instagram:	#e95950;
 
 // Media
 @desktop_min: 		992px;
