--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -897,6 +897,7 @@ section.form-section {
         img {
             width: 250px;
             height: 250px;
+            margin: auto;
             box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
         }
     }
