--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-12 text-center">
-                    <div class="image">
+                    <div class="image centered">
                         {% include "users/includes/user_avatar_profile_thumbnail.html" with image=user.avatar %}
                     </div>
                     <div class="statistics">
