--- a/static/less/media.less
+++ b/static/less/media.less
@@ -133,5 +133,11 @@
                 display: none;
             }
         }
-    }            
+    }
+    section.about {
+        .container {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    }
 }
