--- a/book/templates/book/list.html
+++ b/book/templates/book/list.html
@@ -7,19 +7,12 @@
 {% endblock title %}
 
 {% block content %}
-    <header class="catalogue">
-        <div class="header-overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="header-content">
-                        <div class="header-content-inner">
-                            <h1>{% trans "Вибери ту, що до вподоби" %}</h1>
-                            <a href="#catalogue-books" class="btn btn-outline btn-xl page-scroll">{% trans "Шукати" %}</a>
-                        </div>
-                        <a href="#catalogue-books" class="page-scroll scroll-icon"><span></span><span></span><span></span></a>
-                    </div>
-                </div>
+    <header class="catalogue mini vertical-center-flex">
+        <div class="container">
+            <div class="row">
+                <h3>{% trans "Вибери книгу" %}</h3>
             </div>
+            {% block messages %}{{ block.super }}{% endblock messages %}
         </div>
     </header>
 
