Changed message for book confirmation

--- a/common/templates/common/emails/return_book.html
+++ b/common/templates/common/emails/return_book.html
@@ -10,7 +10,7 @@
                     <td style="padding: 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                         <h1 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 24px; line-height: 27px; color: #333333; font-weight: normal;">Поверніть книгу</h1>
                         <p style="margin: 0;">
-                            Час на читання книги <a href="{{ BASE_URL }}{{ book.get_absolute_url }}">{{ book.name }}</a> минув. Ви повинні повернути книгу на сайт. Натисніть кнопку нижче, щоб підтвердити це. Інакше ви будете заблоковані на нашому ресурсі.
+                            Час на читання книги <a href="{{ BASE_URL }}{{ book.get_absolute_url }}">{{ book.name }}</a> минув. Ви повинні повернути книгу на сайт. Натисніть кнопку нижче, щоб підтвердити це.
                     </td>
                 </tr>
             </table>
