--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -1086,6 +1086,9 @@ footer {
     background: @theme-primary;
     background: -webkit-linear-gradient(@theme-primary , darken(@theme-primary, 5%));
     background: linear-gradient(@theme-primary , darken(@theme-primary, 5%));
+    .tertiary {
+        color: @theme-tertiary;
+    }
 }
 .bg-principal {
     background: @theme-principal;
