--- a/users/templates/users/invite-register.html
+++ b/users/templates/users/invite-register.html
@@ -12,10 +12,11 @@
                 <div class="row">
                     <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
                         <h1>{% trans "Реєстрація" %}</h1>
-                        <h4>Вас запросив: {{ invited_by.get_full_name }}</h4>
-                        <p>Вітаємо! {{ invited_by.get_full_name|title }} запросив вас в bookgo. Прочитайте правила користування сервісом: . І швидше беріть участь в обміні!</p>
+                        <p>Вітаємо! <span class="tertiary">{{ invited_by.get_full_name|title }}</span> запросив вас в bookgo. Прочитайте <a href="{% url 'common:about' %}" class="tertiary">правила користування сервісом</a> і швидше беріть участь в обміні!</p>
                         {% if form.errors %}
-                            <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
+                            <div class="alert alert-danger" role="alert">
+                                {% trans "Виправте помилки нижче" %}
+                            </div>
                         {% endif %}
                         {% if form.non_field_errors %}
                             {% for err in form.non_field_errors %}
@@ -26,6 +27,11 @@
                             {{ form.email.label_tag }}
                             <strong>{{ form.email.errors.as_text }}</strong>
                             {{ form.email }}
+                        </div>
+                        <div>
+                            {{ form.phone.label_tag }}
+                            <strong>{{ form.phone.errors.as_text }}</strong>
+                            {{ form.phone }}
                         </div>
                         <div>
                             {{ form.password.label_tag }}
