--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -51,6 +51,11 @@ p.smaller {
     font-size: 16px;
 }
 
+p.smallest {
+    font-size: 12px;
+}
+
+
 .vertical-center {
     margin-top: 10px;
     margin-bottom: 10px;
