--- a/users/templates/users/invite-register.html
+++ b/users/templates/users/invite-register.html
@@ -11,8 +11,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
-                        <h1>{% trans "Реєстрація" %}</h1>
-                        <p>Вітаємо! <span class="tertiary">{{ invited_by.get_full_name|title }}</span> запросив вас в bookgo. Прочитайте <a href="{% url 'common:about' %}" class="tertiary">правила користування сервісом</a> і швидше беріть участь в обміні!</p>
+                        <h1 class="tertiary">{% trans "Реєстрація" %}</h1>
                         {% if form.errors %}
                             <div class="alert alert-danger" role="alert">
                                 {% trans "Виправте помилки нижче" %}
@@ -24,7 +23,7 @@
                             {% endfor %}
                         {% endif %}
                         <div>
-                            {{ form.email.label_tag }}
+                            {{ form.email.label_tag }}*
                             <strong>{{ form.email.errors.as_text }}</strong>
                             {{ form.email }}
                         </div>
@@ -34,15 +33,16 @@
                             {{ form.phone }}
                         </div>
                         <div>
-                            {{ form.password.label_tag }}
+                            {{ form.password.label_tag }}*
                             <strong>{{ form.password.errors.as_text }}</strong>
                             {{ form.password }}
                         </div>
                         <div>
-                            {{ form.password2.label_tag }}
-                            <strong>{{ form.password2.errors.as_text }}</strong>
-                            {{ form.password2 }}
+                            {{ form.fb.label_tag }}
+                            <strong>{{ form.fb.errors.as_text }}</strong>
+                            {{ form.fb }}
                         </div>
+                        <p>Реєструючись, ви погоджуєтесь з <a href="{% url 'common:about' %}" class="tertiary" target="_blank">правилами користування сервісом</a></p>
                         <div class="text-center">
                             <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Зареєструватись" %}</button>
                         </div>
