Add amazon link field

--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -23,6 +23,28 @@
                                     <span>Автор:</span>
                                     <p>{{ book.author }}</p>
                                 </li>
+
+                                {% if book.publisher %}
+                                    <li>
+                                        <span>Видавництво:</span>
+                                        <p>{{ book.publisher }}</p>
+                                    </li>
+                                {% endif %}
+
+                                {% if book.publishing_year %}
+                                    <li>
+                                        <span>Рік видавництва:</span>
+                                        <p>{{ book.publishing_year }}</p>
+                                    </li>
+                                {% endif %}
+
+                                {% if book.amazon_link %}
+                                    <li>
+                                        <span>Amazon:</span>
+                                        <p>{{ book.amazon_link }}</p>
+                                    </li>
+                            {% endif %}
+
                                 <li>
                                     <span>Жанр:</span>
                                     <a href="{% url 'book:list' %}?genre={{ book.genre.id }}">{{ book.genre }}</a>
@@ -67,31 +89,31 @@
                                         {% if not reading.is_confirmed and not reading.is_read %}
                                             {% blocktrans %}
                                                 Ви надіслали заявку, щоб почитати цю книгу, проте людина у якої вона зараз знаходиться, ще не підтвердила надсилання книги! Як тільки вона це зробить - ми вас повідомимо! Очікуйте сповіщення!
-                                            {% endblocktrans %}    
+                                            {% endblocktrans %}
                                         {% elif reading.is_confirmed %}
                                             {% blocktrans %}
                                                 Користувач, в якого зараз ця книга підтвердив, що надішле цю книгу не пізніще як через 2 дні, або вже надіслав. Коли ви закінчите читати, поверніть книгу на сайт, натиснувши кнопку нижче. На читання книги, у вас 14 днів.
-                                            {% endblocktrans %}    
+                                            {% endblocktrans %}
                                             <form action="{% url 'book:book-read' reading.id %}" method="POST">{% csrf_token %}
                                                 <button type="submit" class="btn btn-filled-tertiary">{% trans "Прочитав!" %}</button>
                                             </form>
                                         {% elif reading.is_read %}
                                             {% blocktrans %}
                                                 Ви прочитали цю книгу і повернули її на сайт. Тепер вона чекає нового читача! Книга зберігається у вас, та як тільки хтось оформить заявку на її читання, вам прийде сповіщення, і ви зобов'язані надіслати книгу за даними протягом 2 днів.
-                                            {% endblocktrans %}    
+                                            {% endblocktrans %}
                                         {% endif %}
                                     {% elif reading.book.current_owner == request.user %}
                                         {% if not reading.is_confirmed and not reading.is_read %}
                                             {% blocktrans with user_url=reading.user.get_absolute_url user_name=reading.user.get_full_name %}
                                                 Ви - власник, цієї книги. Користувач <a href="{{ user_url }}">{{ user_name }}</a> хоче взяти її почитати. Натисніть кнопку, щоб підтвердити, що ви надішлете книгу Новою Поштою за <a href="">вказаними даними</a> протягом 2 днів.
-                                            {% endblocktrans %}    
+                                            {% endblocktrans %}
                                             <form action="{% url 'book:owner-confirm' reading.id %}" method="POST">{% csrf_token %}
                                                 <button type="submit" class="btn btn-filled-tertiary">{% trans "Підтверджую!" %}</button>
                                             </form>
                                         {% elif reading.is_confirmed %}
                                             {% blocktrans with user_url=reading.user.get_absolute_url user_name=reading.user.get_full_name %}
                                                 Ви підтвердили надсилання книги Новою Поштою! <a href="{{ user_url }}">{{ user_name }}</a> отримав сповіщення і, можливо, вже читає книгу! Дякуємо вам!
-                                            {% endblocktrans %}    
+                                            {% endblocktrans %}
                                         {% endif %}
                                     {% endif %}
                                     <div class="clearfix"></div>
