--- a/book/templates/book/add.html
+++ b/book/templates/book/add.html
@@ -65,11 +65,14 @@
                                     <strong>{{ form.publisher.errors.as_text }}</strong>
                                     {{ form.publisher }}
 
-                                    <strong>{{ form.publishing_date.errors.as_text }}</strong>
-                                    {{ form.publishing_date }}
+                                    <strong>{{ form.publishing_year.errors.as_text }}</strong>
+                                    {{ form.publishing_year }}
 
                                     <strong>{{ form.pages.errors.as_text }}</strong>
                                     {{ form.pages }}
+
+                                    <strong>{{ form.amazon_link.errors.as_text }}</strong>
+                                    {{ form.amazon_link }}
 
                                     <div class="autocomplete">
                                         {{ form.category.label_tag }}
