--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load i18n %}
 {% load user_tags %}
 
@@ -8,12 +9,15 @@
     <section id="single-book" class="single-book bg-primary text-center">
         <div class="container">
             <div class="row">
+
                 {% block messages %}
                     {{ block.super }}
                 {% endblock messages %}
+
                 <div class="col-md-5 col-sm-12 text-center">
                     {% include "book/includes/book_full_thumbnail.html" with image=book.photo %}
                 </div>
+
                 <div class="col-md-7 col-sm-12">
                     <h2 class="section-heading">{{ book.name }}</h2>
                     <div class="row">
@@ -43,7 +47,7 @@
                                         <span>Amazon:</span>
                                         <p>{{ book.amazon_link }}</p>
                                     </li>
-                            {% endif %}
+                                {% endif %}
 
                                 <li>
                                     <span>Жанр:</span>
@@ -61,7 +65,7 @@
                         </div>
                         <div class="col-md-4">
                             <div>
-                                {% if book.available_to_take %}
+                                {% if book.available_to_exchange %}
                                     <a href="#form" class="btn btn-outline btn-xl page-scroll">Доступно!</a>
                                 {% else %}
                                     <span class="btn btn-outline btn-xl">Не доступно :(</span>
@@ -70,7 +74,7 @@
                             {% if request.user == book.owner or request.user.is_superuser %}
                                 <br>
                                 <div>
-                                   <a href="{% url 'book:edit' book.id %}" class="btn btn-outline">Редагувати!</a>
+                                    <a href="{% url 'book:edit' book.id %}" class="btn btn-outline">Редагувати!</a>
                                 </div>
                             {% endif %}
                         </div>
@@ -88,35 +92,52 @@
                                     {% if reading.user == request.user %}
                                         {% if not reading.is_confirmed and not reading.is_read %}
                                             {% blocktrans %}
-                                                Ви надіслали заявку, щоб почитати цю книгу, проте людина у якої вона зараз знаходиться, ще не підтвердила надсилання книги! Як тільки вона це зробить - ми вас повідомимо! Очікуйте сповіщення!
+                                                Ви надіслали заявку, щоб почитати цю книгу, проте людина у якої вона
+                                                зараз знаходиться, ще не підтвердила надсилання книги! Як тільки вона це
+                                                зробить - ми вас повідомимо! Очікуйте сповіщення!
                                             {% endblocktrans %}
                                         {% elif reading.is_confirmed %}
                                             {% blocktrans %}
-                                                Користувач, в якого зараз ця книга підтвердив, що надішле цю книгу не пізніще як через 2 дні, або вже надіслав. Коли ви закінчите читати, поверніть книгу на сайт, натиснувши кнопку нижче. На читання книги, у вас 14 днів.
+                                                Користувач, в якого зараз ця книга підтвердив, що надішле цю книгу не
+                                                пізніще як через 2 дні, або вже надіслав. Коли ви закінчите читати,
+                                                поверніть книгу на сайт, натиснувши кнопку нижче. На читання книги, у
+                                                вас 14 днів.
                                             {% endblocktrans %}
-                                            <form action="{% url 'book:book-read' reading.id %}" method="POST">{% csrf_token %}
-                                                <button type="submit" class="btn btn-filled-tertiary">{% trans "Прочитав!" %}</button>
+                                            <form action="{% url 'book:book-read' reading.id %}"
+                                                  method="POST">{% csrf_token %}
+                                                <button type="submit"
+                                                        class="btn btn-filled-tertiary">{% trans "Прочитав!" %}</button>
                                             </form>
                                         {% elif reading.is_read %}
                                             {% blocktrans %}
-                                                Ви прочитали цю книгу і повернули її на сайт. Тепер вона чекає нового читача! Книга зберігається у вас, та як тільки хтось оформить заявку на її читання, вам прийде сповіщення, і ви зобов'язані надіслати книгу за даними протягом 2 днів.
+                                                Ви прочитали цю книгу і повернули її на сайт. Тепер вона чекає нового
+                                                читача! Книга зберігається у вас, та як тільки хтось оформить заявку на
+                                                її читання, вам прийде сповіщення, і ви зобов'язані надіслати книгу за
+                                                даними протягом 2 днів.
                                             {% endblocktrans %}
                                         {% endif %}
                                     {% elif reading.book.current_owner == request.user %}
                                         {% if not reading.is_confirmed and not reading.is_read %}
                                             {% blocktrans with user_url=reading.user.get_absolute_url user_name=reading.user.get_full_name %}
-                                                Ви - власник, цієї книги. Користувач <a href="{{ user_url }}">{{ user_name }}</a> хоче взяти її почитати. Натисніть кнопку, щоб підтвердити, що ви надішлете книгу Новою Поштою за <a href="">вказаними даними</a> протягом 2 днів.
+                                                Ви - власник, цієї книги. Користувач
+                                                <a href="{{ user_url }}">{{ user_name }}</a> хоче взяти її почитати.
+                                                Натисніть кнопку, щоб підтвердити, що ви надішлете книгу Новою Поштою за
+                                                <a href="">вказаними даними</a> протягом 2 днів.
                                             {% endblocktrans %}
-                                            <form action="{% url 'book:owner-confirm' reading.id %}" method="POST">{% csrf_token %}
-                                                <button type="submit" class="btn btn-filled-tertiary">{% trans "Підтверджую!" %}</button>
+                                            <form action="{% url 'book:owner-confirm' reading.id %}"
+                                                  method="POST">{% csrf_token %}
+                                                <button type="submit"
+                                                        class="btn btn-filled-tertiary">{% trans "Підтверджую!" %}</button>
                                             </form>
                                         {% elif reading.is_confirmed %}
                                             {% blocktrans with user_url=reading.user.get_absolute_url user_name=reading.user.get_full_name %}
-                                                Ви підтвердили надсилання книги Новою Поштою! <a href="{{ user_url }}">{{ user_name }}</a> отримав сповіщення і, можливо, вже читає книгу! Дякуємо вам!
+                                                Ви підтвердили надсилання книги Новою Поштою!
+                                                <a href="{{ user_url }}">{{ user_name }}</a> отримав сповіщення і,
+                                                можливо, вже читає книгу! Дякуємо вам!
                                             {% endblocktrans %}
                                         {% endif %}
                                     {% endif %}
-                                    <div class="clearfix"></div>
+                                <div class="clearfix"></div>
                                 </p>
                             </div>
                         {% endif %}
@@ -179,18 +200,20 @@
                         {% if request.user.is_authenticated %}
                             <p class="text-muted">
                                 {% blocktrans %}
-                                    Швидше заповнюй цю форму! Власник книги отримає сповіщення про те, що ти хочеш почитати книгу "{{ book.name }}" і надішле тобі книгу за цими даними.
+                                    Швидше заповнюй цю форму! Власник книги отримає сповіщення про те, що ти хочеш
+                                    почитати книгу "{{ book.name }}" і надішле тобі книгу за цими даними.
                                 {% endblocktrans %}
                             </p>
                             {% if not request.user.has_enough_to_read %}
                                 <p class="text-muted form-error">
                                     {% url 'book:add' as add_book_link %}
                                     {% blocktrans %}
-                                        Недостятньо можливостей! <a href="{{ add_book_link }}">Додай свою книжку</a>, і отримай за це <span class="delighted">3 можливості</span>.
+                                        Недостятньо можливостей! <a href="{{ add_book_link }}">Додай свою книжку</a>, і
+                                        отримай за це <span class="delighted">3 можливості</span>.
                                     {% endblocktrans %}
                                 </p>
                             {% endif %}
-                            {% if not book.available_to_take %}
+                            {% if not book.available_to_exchange %}
                                 <p class="text-muted form-error">
                                     {% blocktrans %}
                                         Цю книгу зараз читає інша людина почекайте, поки вона звільниться!
@@ -248,7 +271,7 @@
                         <button class="btn btn-filled-tertiary btn-xl" type="submit">Надіслати</button>
                     </div>
                 </form>
-            {% elif request.user.has_enough_to_read and book.available_to_take and not request.user.has_unfinished_readings %}
+            {% elif request.user.has_enough_to_read and book.available_to_exchange and not request.user.has_unfinished_readings %}
                 <form action="{% url 'book:detail' book.pk %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
@@ -289,13 +312,16 @@
             <h2>Розкажи всім <i class="fa fa-share-alt"></i> про <br> таку чудову книгу!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href="https://twitter.com/intent/tweet?text={{ share_text }}&url={{ request.build_absolute_uri }}" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/intent/tweet?text={{ share_text }}&url={{ request.build_absolute_uri }}"
+                       target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-facebook">
-                    <a href="https://www.facebook.com/share.php?u={{ request.build_absolute_uri }}"  target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/share.php?u={{ request.build_absolute_uri }}" target="_blank"><i
+                            class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
-                    <a href="http://pinterest.com/pin/create/button/?url={{ request.build_absolute_uri }}&description={{ share_text }}&media=" target="_blank"><i class="fa fa-pinterest"></i></a>
+                    <a href="http://pinterest.com/pin/create/button/?url={{ request.build_absolute_uri }}&description={{ share_text }}&media="
+                       target="_blank"><i class="fa fa-pinterest"></i></a>
                 </li>
             </ul>
         </div>
